[package]
name = "lemonmath"
description = "A math library"
authors = ["LonnonjamesD"]
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/LonnonDev/lemonmath"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]